# Jaxed

./: .buildinfo  CNAME  README.md  __version__.py  genindex.html  include_readme.html  index.html  jaxed.html  jaxed.internals.html  jaxed.layers.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py
.doctrees/: environment.pickle  include_readme.doctree  index.doctree  jaxed.doctree  jaxed.internals.doctree  jaxed.layers.doctree  modules.doctree
.github/workflows/: docs.yml
_modules/: index.html
_modules/jaxed/: utils.html
_modules/jaxed/internals/: api.html  invertible_ad.html
_modules/jaxed/layers/: layers.html  revnet.html  utils.html
_sources/: jaxed.internals.rst.txt  jaxed.layers.rst.txt  jaxed.rst.txt
docs/source/: conf.py  index.rst  jaxed.layers.rst  jaxed.rst  modules.rst  readme.md
jaxed/: __init__.py  __version__.py  utils.py
jaxed/internals/: README.md  __init__.py  api.py  invertible_ad.py  lax_extensions.py  test.py
jaxed/layers/: __init__.py  layers.py  revnet.py  utils.py
source/: conf.py  index.rst
tests/: internals_tests.py  test_internals.py  test_layers.py
