[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Jaxed"
dynamic = ["version"]
readme = "README.md"
keywords = ["Jax", "Deep Learning", "Automatic Differentiation", "AD", "Artificial Intelligence", "AI", "Machine Learning", "ML"]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.9',
]

[license]
file = "LICENSE"

dependencies = [
  "jax",
  "flax"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "pytest",
    "ipython",
    "mypy",
    "sphinx",
    "sphinx-rtd-theme"
]
